--- a/yelpcamp/views/campgrounds.ejs
+++ b/yelpcamp/views/campgrounds.ejs
@@ -1,3 +1,5 @@
+<%- include('partials/header.ejs') %>
+
 <h1> List of campgrounds </h1>
 
 <% camps.forEach( (camp) => { %>
@@ -7,3 +9,5 @@
     </div> 
 
 <% }); %>
+
+<%- include('partials/footer.ejs') %>
