--- a/yelpcamp/views/landingPage.ejs
+++ b/yelpcamp/views/landingPage.ejs
@@ -1,5 +1,10 @@
+<%- include('partials/header.ejs') %>
+
+
 <h1> Landing Page </h1>
 
 <p> Welcome to yelpcamp </p>
 
 <a href="/campgrounds"> View all campgrounds </a>
+
+<%- include("partials/footer.ejs") %>
