--- a/yelpcamp/views/campgrounds.ejs
+++ b/yelpcamp/views/campgrounds.ejs
@@ -1,14 +1,26 @@
 <%- include('partials/header.ejs') %>
 
-<h1> List of campgrounds </h1>
+    <div class="container">
 
-<% camps.forEach( (camp) => { %>
-    
-    <div> 
-        <h4> <%= camp.name %> </h4>
-        <img src= "<%= camp.image %> ">
-    </div> 
+        <!-- Just the jumbotron part-->
+        <header class="jumbotron">
+            <div class=="container">
+                <h1 class="display-4"> CAMPGROUNDS PAGE </h1>
+                <p class="lead"> You can check out all campgrounds here.  </p>
+                <p> <a class="btn btn-primary btn-lg"> Add New Campground </a> </p>
+            </div>
+        </header>
 
-<% }); %>
+        <div class="row text-center" style="display: flex; flex-wrap: wrap;">            
+            <% camps.forEach( (camp) => { %>
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <div class="img-thumbnail image">
+                        <img src= "<%= camp.image %> " class="img-fluid">   
+                        <div class="caption"> <br> <h4> <%= camp.name %> </h4> </div>                 
+                    </div>
+                </div>
+            <% }); %>
+        </div>
 
+    </div>
 <%- include('partials/footer.ejs') %>
