--- a/yelpcamp/views/newcamp.ejs
+++ b/yelpcamp/views/newcamp.ejs
@@ -1,12 +1,26 @@
 <%- include('partials/header.ejs') %>
 
-<h1> Create a New Campground </h1>
+<div class="container">
+    <div class="row">
+        <h1> Create a New Campground </h1>
+    <form action="/campgrounds" method="POST">
+        
+            <div style="width:40%; margin: 0 auto;">       
+                <div class="form-group">
+                    <label for="campName"> Camp Name </label>
+                    <input type="text" class="form-control" placeholder="camp's name" id="campName">
+                </div>
+                <div class="form-group">
+                    <label for="campImg"> Camp Image </label>
+                    <input type="password" class="form-control" placeholder="Camp Image URL" id="campImg">
+                </div>
+                <button type="submit" class="btn btn-primary btn-block">Submit</button>
+            </div>
+        </div>
+    </form>
+</div>
 
-<form action="/campgrounds" method="POST">
-    <input type="text" name="campName" placeholder="Campground Name">  
-    <input type="text" name="campImg" placeholder="Image URL">
-    <input type="submit">
-</form>
+<br> <br>
+<h4 style="margin: 0 auto;" class="text-center"> <a href="/campgrounds"> Go Back to campgrounds </a> </h4>
 
-<a href="/campgrounds"> Go Back </a>
 <%- include('partials/footer.ejs') %>
