--- a/yelpcamp/views/newcamp.ejs
+++ b/yelpcamp/views/newcamp.ejs
@@ -1,11 +1,10 @@
 <%- include('partials/header.ejs') %>
 
 <div class="container">
-    <div class="row">
-        <h1> Create a New Campground </h1>
-    <form action="/campgrounds" method="POST">
-        
-            <div style="width:40%; margin: 0 auto;">       
+    <h1 style="margin-left: 7.5em; margin-block-start: 2em ;"> Create New Campgrounds </h1><br><br>
+    
+        <form action="/campgrounds" method="POST">
+            <div style=" width:60%; margin: 0 auto;">
                 <div class="form-group">
                     <label for="campName"> Camp Name </label>
                     <input type="text" class="form-control" placeholder="camp's name" id="campName">
@@ -15,12 +14,35 @@
                     <input type="password" class="form-control" placeholder="Camp Image URL" id="campImg">
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">Submit</button>
+                <br> 
+                <p style="margin: 0 auto;" class="text-center"> <a href="/campgrounds">Go Back</a> <p>
             </div>
-        </div>
-    </form>
+        </form>
+    
 </div>
 
-<br> <br>
-<h4 style="margin: 0 auto;" class="text-center"> <a href="/campgrounds"> Go Back to campgrounds </a> </h4>
+<!--
+<div class="container">
+    <div class="row"> 
+        <br> <br>
+        <form action="/campgrounds" method="POST">      
+            <div style="width: 50%; margin: 0 auto;">       
+                <div class="form-group">
+                    <label for="campName"> Camp Name </label>
+                    <input type="text" class="form-control" placeholder="camp's name" id="campName">
+                </div>
+                <div class="form-group">
+                    <label for="campImg"> Camp Image </label>
+                    <input type="password" class="form-control" placeholder="Camp Image URL" id="campImg">
+                </div>
+                <button type="submit" class="btn btn-primary btn-block">Submit</button>
+                <br> 
+                <p style="margin: 0 auto;" class="text-center"> <a href="/campgrounds"> Go Back to campgrounds </a> <p>
+            </div>
+        </form>
+    </div>
+</div>
+
+--->
 
 <%- include('partials/footer.ejs') %>
