--- a/yelpcamp/views/newcamp.ejs
+++ b/yelpcamp/views/newcamp.ejs
@@ -7,11 +7,11 @@
             <div style=" width:60%; margin: 0 auto;">
                 <div class="form-group">
                     <label for="campName"> Camp Name </label>
-                    <input type="text" class="form-control" placeholder="camp's name" id="campName">
+                    <input type="text" class="form-control" placeholder="camp's name" id="campName" name='campName'>
                 </div>
                 <div class="form-group">
                     <label for="campImg"> Camp Image </label>
-                    <input type="password" class="form-control" placeholder="Camp Image URL" id="campImg">
+                    <input type="text" class="form-control" placeholder="Camp Image URL" name='campImg' id="campImg">
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">Submit</button>
                 <br> 
