--- a/yelpcamp/views/index.ejs
+++ b/yelpcamp/views/index.ejs
@@ -16,6 +16,7 @@
                     <div class="img-thumbnail image">
                         <img src= "<%= camp.image %> " class="img-fluid">   
                         <div class="caption"> <br> <h4> <%= camp.name %> </h4> </div>                 
+                        <p> <a href="/campgrounds/<%=camp._id%>" class="btn btn-primary"> More Info </a> </p>
                     </div>
                 </div>
             <% }); %>
