--- a/yelpcamp/views/newcamp.ejs
+++ b/yelpcamp/views/newcamp.ejs
@@ -7,11 +7,15 @@
             <div style=" width:60%; margin: 0 auto;">
                 <div class="form-group">
                     <label for="campName"> Camp Name </label>
-                    <input type="text" class="form-control" placeholder="camp's name" id="campName" name='campName'>
+                    <input type="text" class="form-control" placeholder="Camp's Name" id="campName" name='campName'>
                 </div>
                 <div class="form-group">
                     <label for="campImg"> Camp Image </label>
                     <input type="text" class="form-control" placeholder="Camp Image URL" name='campImg' id="campImg">
+                </div>
+                <div class="form-group">
+                    <label for="campDesc"> Camp Description </label>
+                    <input type="text" class="form-control"  placeholder="Describe the camp!" name='description'>
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">Submit</button>
                 <br> 
