Comment Creation (Part 1)
    - Since there will be rested routes, some file structuring is requirede to make things easier.
    - Inside "views" create 2 directories for "comments" & "campgrounds" for respective templates.
    - Create a 'newComment.ejs' template for showing a form to fill in comment.
    - Copy paste basic form code from 'newcamp.ejs' and change form submission URL to '/campgrounds/:id/comments' with POST method.
    - In the app.js create a new route handler for the URL GET '/campgrounds/:id/comments/new', fetch the camp by id and then pass it on to 'newComment.ejs' template.

--- a/yelpcamp/views/campgrounds/newcamp.ejs
+++ b/yelpcamp/views/campgrounds/newcamp.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header.ejs') %>
+<%- include('../partials/header.ejs') %>
 
 <div class="container">
     <h1 style="margin-left: 7.5em; margin-block-start: 2em ;"> Create New Campgrounds </h1><br><br>
@@ -49,4 +49,4 @@
 
 --->
 
-<%- include('partials/footer.ejs') %>
+<%- include('../partials/footer.ejs') %>
