--- a/yelpcamp/views/campgrounds/index.ejs
+++ b/yelpcamp/views/campgrounds/index.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header.ejs') %>
+<%- include('../partials/header.ejs') %>
 
     <div class="container">
         <!-- Just the jumbotron part-->
@@ -23,4 +23,4 @@
         </div>
 
     </div>
-<%- include('partials/footer.ejs') %>
+<%- include('../partials/footer.ejs') %>
