Comment Creation (Part 2)
    - Include a button to "ADD NEW COMMENT" in the show.ejs template ( of route '/campgrounds/:id/comments' ) that redirects user to '/campgrounds/:id/comments/new' to add comments.
    - Add a route handler for POST 'campgrounds/:id/comments'. The handler fetches the campground object from DB, inserts the comments and redirects the user to '/campgrounds/:id' page.
    - Keep the values 'name' & 'id' attributes as same to make the bootstrap form work.

--- a/yelpcamp/views/campgrounds/show.ejs
+++ b/yelpcamp/views/campgrounds/show.ejs
@@ -6,6 +6,10 @@
 
 <p> <%= camp.description %></p>
 
+<p>
+    <a class ="btn btn-primary" href="/campgrounds/<%= camp._id %>/comments/new"> Add New Comment </a>
+    </a>
+</p> 
 
 <% camp.comments.forEach( (comment) => { %>
     <p> <strong> <%= comment.author %> </strong> - <%= comment.text %> </p>
