--- a/yelpcamp/views/campgrounds/show.ejs
+++ b/yelpcamp/views/campgrounds/show.ejs
@@ -1,18 +1,54 @@
 <%- include('../partials/header.ejs') %>
 
-<h2> <%= camp.name %> </h2>
+<div class="container">
+    <div class="row">
 
-<img src="<%= camp.image %>">
+        <!-- Side bar for map & other data -->
+        <div class="col-md-3">
+            <p class="lead">YelpCamp</p>
+            <div class"list-group">
+                <li class="list-group-item active">Info 1</li>
+                <li class="list-group-item">Info 1</li>
+                <li class="list-group-item">Info 1</li>
+            </div>    
+        </div>
 
-<p> <%= camp.description %></p>
+        <!-- Main place for Pics, desc, Reviews -->
+        <div class="col-md-9">
+            <div class="figure">
+                <img class="figure-img img-fluid" src="<%= camp.image %>" alt="Campground's Photo">
+                <div class="figure-caption">
+                    <br>
+                    <h4 class="float-right"> Rs.700/night </h4>
+                    <h4> <a href="" > <%= camp.name %> </a> </h4>
+                    <p> <%= camp.description %> </p>
+                </div>
+            </div>
+            
+            <div class="card card-body bg-light">
+                <div class="text-right">
+                    <p> <a class ="btn btn-primary" href="/campgrounds/<%= camp._id %>/comments/new"> Add New Comment </a> </p> 
+                </div>
+                <hr>
+                <% camp.comments.forEach( (comment) => { %>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <strong> <%= comment.author %> </strong>
+                            <span class="float-right">10 days ago</span>
+                            <p> <%= comment.text %> </p>
+                        </div>
+                    </div>
+                <% }); %>
 
-<p>
-    <a class ="btn btn-primary" href="/campgrounds/<%= camp._id %>/comments/new"> Add New Comment </a>
-    </a>
-</p> 
+            </div>
+        </div>
 
-<% camp.comments.forEach( (comment) => { %>
-    <p> <strong> <%= comment.author %> </strong> - <%= comment.text %> </p>
-<% }); %>
+    </div>
+</div>
+
+
+
+
+
 
 <%- include('../partials/footer.ejs') %>
