--- a/yelpcamp/views/partials/header.ejs
+++ b/yelpcamp/views/partials/header.ejs
@@ -25,15 +25,15 @@
             <ul class="navbar-nav ml-auto">
             
                 <li class="nav-item active">
-                    <a class="nav-link" href="#"> Login <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/login"> Login <span class="sr-only">(current)</span></a>
                 </li>
             
                 <li class="nav-item">
-                    <a class="nav-link" href="#"> Signup </a>
+                    <a class="nav-link" href="/register"> Signup </a>
                 </li>
                 
                 <li class="nav-item">
-                    <a class="nav-link" href="#"> Logout </a>
+                    <a class="nav-link" href="/logout"> Logout </a>
                 </li>
                 <!-- DISABLED OPTION; Eg: When you are signedin, disable signin button & when signed out disable signout button
                 <li class="nav-item">
