NAVBAR CUSTOMISATIONN BASED ON WHETHER USER IS LOGGED IN OR NOT
    - If you are logged in, you shouldn't be able to access Login buttons & similarly for logged out button.
    - Inside app.js before the first route define a middleware that adds to req.locals (i.e set of varable available inside each ejs template) the user profile.
    -  Inside header.ejs, inside navabar code setup visibility access based on if(user){}-else{}

--- a/yelpcamp/views/register.ejs
+++ b/yelpcamp/views/register.ejs
@@ -8,4 +8,13 @@
     <button> Signup </button> 
 </form>
 
+<div style="margin:4em;">
+    <h3> IMPORTANT NOTE: </h3>
+    <ul> <h5>
+    <li> Set your password such that it has more than 8 eight characters, a mix of both Upper & Lower alphabets and also symbols. </li>
+    <li>Else Chome may show you a warning like "A data breach on a site or app exposed your password".</li>
+    <li> The warning doesn't mean that your passwords or any other accounts got hacked. 
+    <li>It means that your password isn't strong enough and it'd be safe to make it strong. </li>
+    <li><a href="https://support.google.com/chrome/thread/23534509?hl=en&msgid=23692520"> Click here </a> for more information </li>   <h5></h5>
+</div>
 <%- include('partials/footer.ejs') %>
