--- a/yelpcamp/views/partials/header.ejs
+++ b/yelpcamp/views/partials/header.ejs
@@ -23,18 +23,23 @@
       
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
-            
-                <li class="nav-item active">
-                    <a class="nav-link" href="/login"> Login <span class="sr-only">(current)</span></a>
-                </li>
-            
-                <li class="nav-item">
-                    <a class="nav-link" href="/register"> Signup </a>
-                </li>
                 
-                <li class="nav-item">
-                    <a class="nav-link" href="/logout"> Logout </a>
-                </li>
+                <% if(!currentUser){ %>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/login"> Login </a>
+                    </li>
+                
+                    <li class="nav-item">
+                        <a class="nav-link" href="/register"> Signup </a>
+                    </li>
+                <%} else{ %>
+
+                    <li class="nav-item"> 
+                        <a href="#" class="nav-link"> Signed In as <%= currentUser.username %> </a> </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout"> Logout </a>
+                    </li>
+                <% } %>
                 <!-- DISABLED OPTION; Eg: When you are signedin, disable signin button & when signed out disable signout button
                 <li class="nav-item">
                     <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Signout</a>
