ASSOCIATIONS b/w User & comments
    - Automatically infer who authored a comment from their signin name.
    - To do it, remove the author field in the new comments form and then include the author details in the POST '/campgrounds/:id/comments' route handler.
    - In the commentSchema change the structure around a little so as to include the id of author from the users collections and their name as well.
    - Note that you actually dont need to make any changes in the campgroundRoutes but in the show.ejs file, you have to change the code a little to accomodate changed schema of the comments.

--- a/yelpcamp/views/campgrounds/index.ejs
+++ b/yelpcamp/views/campgrounds/index.ejs
@@ -6,7 +6,7 @@
             <div class=="container">
                 <h1 class="display-4"> CAMPGROUNDS PAGE </h1>
                 <p class="lead"> You can check out all campgrounds here.  </p>
-                <p> <a class="btn btn-primary btn-lg"> Add New Campground </a> </p>
+                <p> <a class="btn btn-primary btn-lg" href="/campgrounds/new"> Add New Campground </a> </p>
             </div>
         </header>
 
