--- a/yelpcamp/views/comments/newComment.ejs
+++ b/yelpcamp/views/comments/newComment.ejs
@@ -5,15 +5,13 @@
     <br><br>
         <form action="/campgrounds/<%=camp._id%>/comments" method="POST">
             <div style=" width:60%; margin: 0 auto;">
-                <div class="form-group">
-                    <label for="commentAuthor"> Author name </label>
-                    <input type="text" class="form-control" placeholder="Your Name" id="commentAuthor" name='commentAuthor'>
-                </div> 
+                
                 <div class="form-group">
                     <label for="commentText"> Your Comment </label>
                     <input type="text" class="form-control" placeholder="Comment" name='commentText' id="commentText">
                 </div>
 
+                <!-- try to introduce a photo here -->
                 <button type="submit" class="btn btn-primary btn-block">Submit</button>
                 <br> 
                 <p style="margin: 0 auto;" class="text-center"> <a href="/campgrounds">Go Back</a> <p>
