--- a/yelpcamp/views/campgrounds/show.ejs
+++ b/yelpcamp/views/campgrounds/show.ejs
@@ -22,6 +22,7 @@
                     <h4 class="float-right"> Rs.700/night </h4>
                     <h4> <a href="" > <%= camp.name %> </a> </h4>
                     <p> <%= camp.description %> </p>
+                    <p> <em> Written by <%= camp.author.username %> </em></p>
                 </div>
             </div>
             
