--- a/yelpcamp/views/campgrounds/show.ejs
+++ b/yelpcamp/views/campgrounds/show.ejs
@@ -23,6 +23,7 @@
                     <h4> <a href="" > <%= camp.name %> </a> </h4>
                     <p> <%= camp.description %> </p>
                     <p> <em> Written by <%= camp.author.username %> </em></p>
+                    <a class="btn btn-warning" href="/campgrounds/<%= camp._id %>/edit"> Edit </a>
                 </div>
             </div>
             
