--- a/yelpcamp/public/stylesheets/main.css
+++ b/yelpcamp/public/stylesheets/main.css
@@ -1,3 +1,4 @@
+
 .img-thumbnail img{
     width:100%;
 }
@@ -15,14 +16,12 @@
     padding:0;
 }
 
-body{
-    background: purple;
-}
+
 
 .figure-caption{
     padding: 10px;
 }
 
-#delete-form{
+.delete-form{
     display: inline;
 }
