--- a/yelpcamp/views/campgrounds/show.ejs
+++ b/yelpcamp/views/campgrounds/show.ejs
@@ -26,15 +26,14 @@
                     <!-- If a user is signed in AND if they are the owners then show the edit & delete buttons
                     Recall that currentUser was setup using the 1st middleware in app.js-->
                     <% if( currentUser && camp.author.id.equals(currentUser._id) ){ %>
-
-
-                    <a class="btn btn-warning" href="/campgrounds/<%= camp._id %>/edit"> Edit </a>
-                    <form id="delete-form" action="/campgrounds/<%= camp._id %>/?_method=DELETE" method=POST>
-                        <button  class="btn btn-danger" > Delete </button>
+                    <a class="btn btn-md btn-warning" href="/campgrounds/<%= camp._id %>/edit"> Edit </a>
+                    <form class="delete-form" action="/campgrounds/<%= camp._id %>/?_method=DELETE" method=POST>
+                        <button  class="btn btn-md btn-danger" > Delete </button>
                     </form>
+                    <% } %>
                 </div>
             </div>
-            
+
             <div class="card card-body bg-light">
                 <div class="text-right">
                     <p> <a class ="btn btn-primary" href="/campgrounds/<%= camp._id %>/comments/new"> Add New Comment </a> </p> 
@@ -46,11 +45,22 @@
                             <strong> <%= comment.author.username %> </strong>
                             <span class="float-right">10 days ago</span>
                             <p> <%= comment.text %> </p>
+                            <% if(comment.author.id.equals(currentUser.id)) { %>
+                                
+                                <a href="/campgrounds/<%= camp._id %>/comments/<%= comment._id %>/edit" class="btn btn-sm btn-warning"> Edit </a>
+
+                                <form action="/campgrounds/<%= camp._id %>/comments/<%= comment._id %>/delete/?_method=DELETE" method="POST" class="delete-form"> 
+                                    <button class="btn btn-sm btn-danger"> Delete </button>
+                                </form>
+
+                            <% } %>
+                            <hr>
                         </div>
                     </div>
                 <% }); %>
 
             </div>
+        
         </div>
 
     </div>
