FLASH (one-time alerts) NOTIFICATIONS
    - Use flash-connect package.
    - Put up a boostrap alert component in header.ejs that receives message from flash package.
    - flash package can send message to different categories (which is stoed in res.locals.categoryname) - these messages will be displayed as flash in the immediate redirect.
    - Update variosu middlewares & routs with req.flash("success", successMsg) or req.flash("error", errMsg)

--- a/yelpcamp/views/partials/header.ejs
+++ b/yelpcamp/views/partials/header.ejs
@@ -15,7 +15,7 @@
     <title> Yelpcamp !</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">YelpCamp</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -49,4 +49,17 @@
         
         </div>
     </nav>
+    <br>
+    <div class="container">
+        <% if(error && error.length > 0){ %> 
+        <div class="alert alert-danger" role="alert">
+            <h4 style="text-align: center; justify-content: center;"> <%= error %> </h4>
+        </div>
+        <% } else if(success && success.length > 0){ %>
+        <div class="alert alert-success" role="alert">
+            <h4 style="text-align: center; justify-content: center;"> <%= success %>  </h4>
+        </div>
+    
+        <% } %>
+    </div>
         
