PRICE EDITING FOR EACH CAMPGROUND     - Add a 'price:String' entry inside the campgroundSchema     - In the newcamp.ejs add a input field for entering price     - In the editCamp.ejs similarly add a field for modifying price.     - In the show.ejs use JS to pull price from the campground object and display to viewer.     - Ensure that you retrieve the price data from the forms (for both new & edit cases)     - Also, a small correction in navabar button (include a redirect to landing page)

--- a/yelpcamp/views/campgrounds/show.ejs
+++ b/yelpcamp/views/campgrounds/show.ejs
@@ -19,7 +19,7 @@
                 <img class="figure-img img-fluid" src="<%= camp.image %>" alt="Campground's Photo">
                 <div class="figure-caption">
                     <br>
-                    <h4 class="float-right"> Rs.700/night </h4>
+                    <h4 class="float-right"> <%= camp.price %> </h4>
                     <h4> <a href="" > <%= camp.name %> </a> </h4>
                     <p> <%= camp.description %> </p>
                     <p> <em> Written by <%= camp.author.username %> </em></p>
