--- a/yelpcamp/views/campgrounds/editCamp.ejs
+++ b/yelpcamp/views/campgrounds/editCamp.ejs
@@ -15,7 +15,11 @@
                 </div>
                 <div class="form-group">
                     <label for="campDesc"> Camp Description </label>
-                    <input type="text" class="form-control"  placeholder="Describe the camp!" name='description' value= "<%=camp.description%>" >
+                    <textarea class="form-control"  placeholder="Describe the camp!" name='description' rows=4 value= "<%=camp.description%>" >
+                </div>
+                <div class="form-group">
+                    <label for="campDesc"> Approximate Charges(usually per 2 or 4 people per session) </label>
+                    <input type="text" class="form-control"  placeholder="Mention an approximate price for 2 or 4 people, per session" name='campPrice' value= "<%=camp.price%>" >
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">Submit</button>
                 <br> 
