--- a/yelpcamp/views/campgrounds/newcamp.ejs
+++ b/yelpcamp/views/campgrounds/newcamp.ejs
@@ -15,7 +15,11 @@
                 </div>
                 <div class="form-group">
                     <label for="campDesc"> Camp Description </label>
-                    <input type="text" class="form-control"  placeholder="Describe the camp!" name='description'>
+                    <textarea type="text" class="form-control"  rows=4 placeholder="Describe the camp!" rows=3 name='description'></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="campDesc"> Approximate Charges </label>
+                    <input type="text" class="form-control"  placeholder="Approx price for 2 or 4 people, per session" name='campPrice'>
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">Submit</button>
                 <br> 
