--- a/yelpcamp/views/campgrounds/editCamp.ejs
+++ b/yelpcamp/views/campgrounds/editCamp.ejs
@@ -15,7 +15,7 @@
                 </div>
                 <div class="form-group">
                     <label for="campDesc"> Camp Description </label>
-                    <textarea class="form-control"  placeholder="Describe the camp!" name='description' rows=4 value= "<%=camp.description%>" >
+                    <textarea class="form-control"  placeholder="Describe the camp!" name='description' rows=4 value= "<%=camp.description%>" > </textarea>
                 </div>
                 <div class="form-group">
                     <label for="campDesc"> Approximate Charges(usually per 2 or 4 people per session) </label>
