--- a/yelpcamp/views/campgrounds/newcamp.ejs
+++ b/yelpcamp/views/campgrounds/newcamp.ejs
@@ -19,7 +19,7 @@
                 </div>
                 <div class="form-group">
                     <label for="campDesc"> Approximate Charges </label>
-                    <input type="text" class="form-control"  placeholder="Approx price for 2 or 4 people, per session" name='campPrice'>
+                    <input type="text" class="form-control"  placeholder="Approx price for 2 or 4 people, per session" name='campPrice' value="Rs ">
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">Submit</button>
                 <br> 
