--- a/yelpcamp/views/campgrounds/show.ejs
+++ b/yelpcamp/views/campgrounds/show.ejs
@@ -22,11 +22,16 @@
                     <h4 class="float-right"> <%= camp.price %> </h4>
                     <h4> <a href="" > <%= camp.name %> </a> </h4>
                     <p> <%= camp.description %> </p>
-                    <p> <em> Written by <%= camp.author.username %> </em></p>
+                    
+                    <p> <em> Written by <%= camp.author.username %> on <%= moment(camp.createdAt).tz("Asia/Kolkata").format('DD MMM YYYY, hh:mm a') %> </em> </p>
+
                     <!-- If a user is signed in AND if they are the owners then show the edit & delete buttons
                     Recall that currentUser was setup using the 1st middleware in app.js-->
+                    
                     <% if( currentUser && camp.author.id.equals(currentUser._id) ){ %>
+                    
                     <a class="btn btn-md btn-warning" href="/campgrounds/<%= camp._id %>/edit"> Edit </a>
+                    
                     <form class="delete-form" action="/campgrounds/<%= camp._id %>/?_method=DELETE" method=POST>
                         <button  class="btn btn-md btn-danger" > Delete </button>
                     </form>
@@ -43,7 +48,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <strong> <%= comment.author.username %> </strong>
-                            <span class="float-right">10 days ago</span>
+                            <span class="float-right"> <em> <%= moment(comment.createdAt).tz("Asia/Kolkata").format('DD MMM YYYY, hh:mm a')  %> </em> </span>
                             <p> <%= comment.text %> </p>
                             <% if(comment.author.id.equals(currentUser.id)) { %>
                                 
