--- a/yelpcamp/views/partials/header.ejs
+++ b/yelpcamp/views/partials/header.ejs
@@ -35,7 +35,15 @@
                 <%} else{ %>
 
                     <li class="nav-item"> 
-                        <a href="#" class="nav-link"> Signed In as <%= currentUser.username %> </a> </li>
+                        <a href="#" class="nav-link"> Signed In as <%= currentUser.username %> </a> 
+                    </li>
+                    <li>
+                        <% if(currentUser.isAdmin){ %>
+                            <a href="#" class="nav-link"> Status: Admin </a>
+                        <% } else{ %>
+                            <a href="#" class="nav-link"> Status: Non-Admin </a>
+                        <% } %>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/logout"> Logout </a>
                     </li>
