ADD USER PROFILE (& a profile page for user)
    - Include flg fields in the UserSchema: avatar (string, url for image), firstname, lastname, email, bio.
    - Modify register.ejs to input those data.
    - Modify '/register' in indexRoutes.js to extract those data from the form
    - Create a 'user.ejs' profile page where people can see details about a user.
    - In the campground's page, hyperlink the user's username (both campground owner & comment authors) to their profile picture.

--- a/yelpcamp/views/partials/header.ejs
+++ b/yelpcamp/views/partials/header.ejs
@@ -35,7 +35,7 @@
                 <%} else{ %>
 
                     <li class="nav-item"> 
-                        <a href="#" class="nav-link"> Signed In as <%= currentUser.username %> </a> 
+                        <a href="/users/<%= currentUser.id%>" class="nav-link"> Signed In as <%= currentUser.username %> </a>
                     </li>
                     <li>
                         <% if(currentUser.isAdmin){ %>
