--- a/yelpcamp/views/campgrounds/show.ejs
+++ b/yelpcamp/views/campgrounds/show.ejs
@@ -23,7 +23,7 @@
                     <h4> <a href="" > <%= camp.name %> </a> </h4>
                     <p> <%= camp.description %> </p>
                     
-                    <p> <em> Written by <%= camp.author.username %> on <%= moment(camp.createdAt).tz("Asia/Kolkata").format('DD MMM YYYY') %> </em> </p>
+                    <p> <em> Written by <a href="/users/<%= camp.author.id%>" > <%= camp.author.username %> </a> on <%= moment(camp.createdAt).tz("Asia/Kolkata").format('DD MMM YYYY') %> </em> </p>
 
                     <!-- If a user is signed in AND if they are the owners then show the edit & delete buttons
                     Recall that currentUser was setup using the 1st middleware in app.js-->
@@ -51,7 +51,7 @@
                 <% camp.comments.forEach( (comment) => { %>
                     <div class="row">
                         <div class="col-md-12">
-                            <strong> <%= comment.author.username %> </strong>
+                            <strong> <a href="/users/<%=comment.author.id%>"> <%= comment.author.username %> </a> </strong>
                             <span class="float-right"> <em> <%= moment(comment.createdAt).tz("Asia/Kolkata").format('DD MMM YYYY')  %> </em> </span>
                             <p> <%= comment.text %> </p>
                             <% if( currentUser && comment.author.id.equals(currentUser.id) ) { %>
