--- a/yelpcamp/views/campgrounds/show.ejs
+++ b/yelpcamp/views/campgrounds/show.ejs
@@ -51,7 +51,9 @@
                 <% camp.comments.forEach( (comment) => { %>
                     <div class="row">
                         <div class="col-md-12">
-                            <strong> <a href="/users/<%=comment.author.id%>"> <%= comment.author.username %> </a> </strong>
+                            <strong> <a href="/users/<%=comment.author.id%>"> <%= comment.author.username %> </a> </strong> 
+                            <span> | <strong> Rating : </strong> <%=comment.rating%> 
+                            </span>
                             <span class="float-right"> <em> <%= moment(comment.createdAt).tz("Asia/Kolkata").format('DD MMM YYYY')  %> </em> </span>
                             <p> <%= comment.text %> </p>
                             <% if( currentUser && comment.author.id.equals(currentUser.id) ) { %>
