--- a/yelpcamp/views/comments/editComment.ejs
+++ b/yelpcamp/views/comments/editComment.ejs
@@ -9,7 +9,10 @@
     <br><br>
         <form action="/campgrounds/<%=campID%>/comments/<%= comment._id %>?_method=PUT" method="POST">
             <div style=" width:60%; margin: 0 auto;">
-                
+                <div class="form-group">
+                    <label for="ratingValue"> Your Rating </label>
+                    <input type="number" id="ratingValue" name="ratingValue" step="0.5" min="0" max="5">
+                </div>
                 <div class="form-group">
                     <label for="commentText"> Your Comment </label>
                     <input type="text" class="form-control" placeholder="Comment" name="commentText" id="commentText" value="<%= comment.text %>">
