--- a/yelpcamp/views/comments/newComment.ejs
+++ b/yelpcamp/views/comments/newComment.ejs
@@ -7,10 +7,13 @@
             <div style=" width:60%; margin: 0 auto;">
                 
                 <div class="form-group">
+                    <label for="ratingValue"> Your Rating </label>
+                    <input type="number" id="ratingValue" name="ratingValue" step="0.5" min="0" max="5">
+                </div>
+                <div class="form-group">
                     <label for="commentText"> Your Comment </label>
                     <input type="text" class="form-control" placeholder="Comment" name='commentText' id="commentText">
                 </div>
-
                 <!-- try to introduce a photo here -->
                 <button type="submit" class="btn btn-primary btn-block">Submit</button>
                 <br> 
