ADD A PASSWORD RESET FEATURE
    - Add new routehandlers in the indexRoutes.js for GET '/users/:userID/password/reset' and POST '/users/:userID/password'
    - Add a 'pwdReset.ejs' template to fill in new password.

--- a/yelpcamp/views/comments/newComment.ejs
+++ b/yelpcamp/views/comments/newComment.ejs
@@ -8,11 +8,11 @@
                 
                 <div class="form-group">
                     <label for="ratingValue"> Your Rating </label>
-                    <input type="number" id="ratingValue" name="ratingValue" step="0.5" min="0" max="5">
+                    <input type="number" id="ratingValue" name="ratingValue" step="0.5" min="0" max="5" required="true">
                 </div>
                 <div class="form-group">
                     <label for="commentText"> Your Comment </label>
-                    <input type="text" class="form-control" placeholder="Comment" name='commentText' id="commentText">
+                    <input type="text" class="form-control" placeholder="Comment" name='commentText' id="commentText" required="true">
                 </div>
                 <!-- try to introduce a photo here -->
                 <button type="submit" class="btn btn-primary btn-block">Submit</button>
