--- a/yelpcamp/views/users.ejs
+++ b/yelpcamp/views/users.ejs
@@ -17,6 +17,7 @@
             <h4> <strong> NAME </strong>: <%=user.firstName + ' ' + user.lastName %></h4>
             <h4> <strong> BIO</strong> : <%= user.bio %> </h4> 
             <h4> <strong>EMAIL</strong> : <%= user.email %> </h4>
+            <h5> <a href="/users/<%=user.id%>/password/reset"> RESET YOUR PASSWORD </a> </h5>
         </div>
 
     </div>
