--- a/yelpcamp/views/campgrounds/newcamp.ejs
+++ b/yelpcamp/views/campgrounds/newcamp.ejs
@@ -7,11 +7,11 @@
             <div style=" width:60%; margin: 0 auto;">
                 <div class="form-group">
                     <label for="campName"> Camp Name </label>
-                    <input type="text" class="form-control" placeholder="Camp's Name" id="campName" name='campName'>
+                    <input type="text" class="form-control" placeholder="Camp's Name" id="campName" name='campName' required="true">
                 </div>
                 <div class="form-group">
                     <label for="campImg"> Camp Image </label>
-                    <input type="text" class="form-control" placeholder="Camp Image URL" name='campImg' id="campImg">
+                    <input type="text" class="form-control" placeholder="Camp Image URL" name='campImg' id="campImg" required="true">
                 </div>
                 <div class="form-group">
                     <label for="campDesc"> Camp Description </label>
@@ -19,7 +19,7 @@
                 </div>
                 <div class="form-group">
                     <label for="campDesc"> Approximate Charges </label>
-                    <input type="text" class="form-control"  placeholder="Approx price for 2 or 4 people, per session" name='campPrice' value="Rs ">
+                    <input type="text" class="form-control"  placeholder="Approx price for 2 or 4 people, per session" name='campPrice' value="Rs " required="true">
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">Submit</button>
                 <br> 
