Average Rating for each campground
    - Logic: Loop through all comments and get the avg value and display it in show.ejs
    - Potential Problem: Multiple comments by same person.

--- a/yelpcamp/public/stylesheets/main.css
+++ b/yelpcamp/public/stylesheets/main.css
@@ -3,11 +3,15 @@
     width:100%;
 }
 
-.figure img{
+.figure{
     width: 100%;
     padding:0;
 }
 
+.figure-img{
+    width: 100%;
+    padding: 0;
+}
 .img-thumbnail{
     padding:0;
 }
@@ -19,7 +23,6 @@
 #profilepage{
     display: inline;
 }
-
 
 
 .figure-caption{
