--- a/yelpcamp/views/campgrounds/show.ejs
+++ b/yelpcamp/views/campgrounds/show.ejs
@@ -11,6 +11,8 @@
                 <li class="list-group-item">Info 1</li>
                 <li class="list-group-item">Info 1</li>
             </div>    
+            <!-- The scripts written below access this element having id as map and render a map inside this-->
+            <div id="map"> </div>
         </div>
 
         <!-- Main place for Pics, desc, Reviews -->
@@ -89,5 +91,21 @@
 
 
 
+<script>
+    function initMap(){
+        let lat = camp.lat;
+        let lon = camp.lon;
+        let center = {lat:lat, lon:lon};
+        let map = new google.maps.Map(document.getElementById('map'), {
+            zoom: 8,
+            center: center,
+            scrollwheel: false
+        });
+        let contentString = `<strong> <%= camp.name %></strong><p><%=camp.description %> </p>`;
+        let infowindow = new google.maps.InfoWindow( {content: contentString} );
+        let marker = new google.maps.Marker( {position:center, map:map} );
+    }
+</script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZHXSyoXAaUHyum245LTzjBWmtBhY4zSU&callback=initMap" type="text/javascript"></script>
 
 <%- include('../partials/footer.ejs') %>
