--- a/yelpcamp/views/campgrounds/editCamp.ejs
+++ b/yelpcamp/views/campgrounds/editCamp.ejs
@@ -13,13 +13,19 @@
                     <label for="campImg"> Camp Image </label>
                     <input type="text" class="form-control" placeholder="Camp Image URL" name='campImg' id="campImg" value="<%= camp.image %>" >
                 </div>
+                
+                <div class="form-group">
+                    <label for="location">
+                        <input class="form-control" type="text" name="location" id="location" placeholder="Address/Location. Eg: Chennai central, TamilNadu" value="<%=camp.location%>">
+                    </label>
+                </div>
                 <div class="form-group">
                     <label for="campDesc"> Camp Description </label>
                     <textarea class="form-control"  placeholder="Describe the camp!" name='description' rows=4 value= "<%=camp.description%>" > </textarea>
                 </div>
                 <div class="form-group">
-                    <label for="campDesc"> Approximate Charges(usually per 2 or 4 people per session) </label>
-                    <input type="text" class="form-control"  placeholder="Mention an approximate price for 2 or 4 people, per session" name='campPrice' value= "<%=camp.price%>" >
+                    <label for="campDesc"> Approximate Charges( per 2 people) </label>
+                    <input type="number" class="form-control"  placeholder="Mention an approximate price in Rs. per session" name='campPrice' value= "<%=camp.price%>" step="1" min="0">
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">Submit</button>
                 <br> 
