--- a/yelpcamp/views/campgrounds/newcamp.ejs
+++ b/yelpcamp/views/campgrounds/newcamp.ejs
@@ -13,13 +13,19 @@
                     <label for="campImg"> Camp Image </label>
                     <input type="text" class="form-control" placeholder="Camp Image URL" name='campImg' id="campImg" required="true">
                 </div>
+
+                <div class="form-group">
+                    <label for="location"> Camp Location </label>
+                        <input class="form-control" type="text" name="location" id="location" placeholder="Address/Location. Eg: Chennai central, TamilNadu" required="true">
+                    </label>
+                </div>
                 <div class="form-group">
                     <label for="campDesc"> Camp Description </label>
                     <textarea type="text" class="form-control"  rows=4 placeholder="Describe the camp!" rows=3 name='description'></textarea>
                 </div>
                 <div class="form-group">
-                    <label for="campDesc"> Approximate Charges </label>
-                    <input type="text" class="form-control"  placeholder="Approx price for 2 or 4 people, per session" name='campPrice' value="Rs " required="true">
+                    <label for="campDesc"> Approximate Charges( per 2 people) </label>
+                    <input type="number" class="form-control"  placeholder="Approx price in rs. per session" name='campPrice' required="true" step="1" min="0">
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">Submit</button>
                 <br> 
