--- a/yelpcamp/views/partials/header.ejs
+++ b/yelpcamp/views/partials/header.ejs
@@ -21,7 +21,20 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/about"> About </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/campgrounds"> Campgrounds </a>
+                </li>
+
+            </ul>
+            
+            
             <ul class="navbar-nav ml-auto">
                 
                 <% if(!currentUser){ %>
