Corrected an error regarding partials not getting recognised in the about.ejs

--- a/yelpcamp/views/about.ejs
+++ b/yelpcamp/views/about.ejs
@@ -1,4 +1,4 @@
-<%- include('./partials/header.ejs') %>
+<%- include('partials/header.ejs') %>
 
 <div class='container'>
     <br><br>
@@ -31,4 +31,4 @@
         </ul>
     </h5>
 </div>
-<%- include('./partials/footer.ejs') %>
+<%- include('partials/footer.ejs') %>
