--- a/yelpcamp/views/partials/header.ejs
+++ b/yelpcamp/views/partials/header.ejs
@@ -25,11 +25,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/about"> About </a>
+                    <a class="nav-link" href="/about" style="font-size: medium;"> About </a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/campgrounds"> Campgrounds </a>
+                    <a class="nav-link" style="font-size: medium;" href="/campgrounds"> Campgrounds </a>
                 </li>
 
             </ul>
